[project]
name = "audiostim-poc"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.12"
authors = []
dependencies = [
    "audiomath>=1.21.5",
    "matplotlib>=3.10.8",
    "numpy>=2.0",
    "radiens-core>=0.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/audiostim_poc"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff",
    "mypy>=1.10",
]


[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
mypy_path = "src"
packages = ["audiostim_poc"]

[[tool.mypy.overrides]]
module = ["scripts.*"]
disable_error_code = ["no-any-return"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TC",   # flake8-type-checking
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["audiostim_poc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
